--- a/index.html
+++ b/index.html
@@ -19,9 +19,89 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Coffee Shop Logo"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li><a href="" class="nav__link">Recipes</a></li>
+            <li><a href="" class="nav__link"></a>Book a table</li>
+            <li><a href="" class="nav__link"></a>Menu</li>
+            <li><a href="" class="nav__link"></a>Contacts</li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Speciality Coffee</span> in the
+          Triple Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+          class="header__image"
+          src="./images/inside_coffee_shop.png"
+          alt="Inside of the Coffee Shop"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div>
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">
+              Monday <code>&#8212;</code> Friday (10:00
+              <code>&#8212;</code> 19:00)
+            </p>
+            <p class="header__paragraph">
+              Saturday <code>&#8212;</code> Sunday (11:00
+              <code>&#8212;</code> 18:00)
+            </p>
+          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+          <ul class="recipes__videos">
+            <li>
+              <iframe
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=6k85fetMnNBhOXyD"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="recipes__iframe"
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span> <span>~5 min</span>
+              </p>
+            </li>
+            <li>
+              <iframe
+                src="https://www.youtube.com/embed/st571DYYTR8?si=-IEfvxGW3dq8Q6fW"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="recipes__iframe"
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span> <span>~15 min</span>
+              </p>
+            </li>
+          </ul>
+        </section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
