--- a/index.html
+++ b/index.html
@@ -99,7 +99,62 @@
             </li>
           </ul>
         </section>
-        <section id="reservation" class="reservation"></section>
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  id="name-input"
+                  type="text"
+                  placeholder="Name Surname"
+                  class="form__input"
+                />
+              </label>
+              <label for="number-input" class="form__label">
+                Number of guests *
+                <input
+                  id="number-input"
+                  type="number"
+                  min="1"
+                  max="8"
+                  placeholder="1-8"
+                  required
+                  class="form__input"
+                />
+              </label>
+              <label for="datetime-input" class="form__label">
+                Date & time *
+                <input
+                  id="datetime-input"
+                  type="datetime-local"
+                  required
+                  class="form__input"
+                />
+              </label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  id="email-input"
+                  type="email"
+                  placeholder="email@email.com"
+                  required
+                  class="form__input"
+                />
+              </label>
+              <button class="form__button">Book a table</button>
+              <label
+                for="checkbox-input"
+                class="form__label form__label_type_checkbox"
+              >
+                <input type="checkbox" required class="form__checkbox" />
+                I agree with the terms of use
+              </label>
+            </fieldset>
+          </form>
+        </section>
+
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
       </main>
