--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
                 for="checkbox-input"
                 class="form__label form__label_type_checkbox"
               >
-                <input type="checkbox" required class="form__checkbox" />
+                <input
+                  id="checkbox-input"
+                  type="checkbox"
+                  required
+                  class="form__checkbox"
+                />
                 I agree with the terms of use
               </label>
             </fieldset>
