--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           />
           <ul class="nav__links">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
-            <li><a href="#reservation" class="nav__link"></a>Book a table</li>
-            <li><a href="#menu" class="nav__link"></a>Menu</li>
-            <li><a href="#about" class="nav__link"></a>Contacts</li>
+            <li><a href="#reservation" class="nav__link">Book a table</a></li>
+            <li><a href="#menu" class="nav__link">Menu</a></li>
+            <li><a href="#about" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="header__title">
