--- a/index.html
+++ b/index.html
@@ -253,7 +253,37 @@
           <div class="about__circle_animation_blurred"></div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="Triple Espresso logo"
+            class="footer__logo"
+          />
+          <div class="footer__column">
+            <h2 class="footer__social-heading">Social media</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="Facebook icon"
+                  class="footer__social__icon"
+                />
+                <a href="" class="footer__social-link">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="Instagram icon"
+                  class="footer__social__icon"
+                />
+                <a href="" class="footer__social-link">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">&#169; 2024 Samuel Goldsmith</p>
+      </footer>
     </div>
   </body>
 </html>
